--- a/src/components/Achieve.astro
+++ b/src/components/Achieve.astro
@@ -144,7 +144,7 @@ const singleSport = [
 </section>
 <style>
   section {
-    margin: 100px 0;
+    margin: 20px 0 100px;
     width: 100vw;
     background-color: whitesmoke;
     text-align: center;
