--- a/src/pages/athlete.astro
+++ b/src/pages/athlete.astro
@@ -9,10 +9,10 @@ const imageURL = "../src/images/gallery/Wolverine.Lite.jpg"
 
 <BaseLayout pageTitle="Amity the Athlete" img={imageURL}>
   <div class="athlete-spacer">
-    <div class="athlete-title">
+    <!-- <div class="athlete-title">
       <p class="athlete-title-one">PRO</p>
       <p class="athlete-title-two">CLIMBER</p>
-    </div>
+    </div> -->
     <div class="scroll-container">
       <img src={arrow} alt="" aria-label="Scroll down">
       <!-- <span>Scroll Down</span> -->
@@ -23,7 +23,7 @@ const imageURL = "../src/images/gallery/Wolverine.Lite.jpg"
 </BaseLayout>
 <style>
   .athlete-spacer {
-    height: 88vh;
+    height: 85vh;
     width: 100vw;
     display: flex;
     flex-direction: column;
