Adjust header margin; hide arrow on overlay

--- a/src/pages/athlete.astro
+++ b/src/pages/athlete.astro
@@ -23,7 +23,7 @@ const imageURL = "../src/images/gallery/Wolverine.Lite.jpg"
 </BaseLayout>
 <style>
   .athlete-spacer {
-    height: 85vh;
+    height: 88vh;
     width: 100vw;
     display: flex;
     flex-direction: column;
@@ -47,11 +47,11 @@ const imageURL = "../src/images/gallery/Wolverine.Lite.jpg"
   .athlete-title-two {
   }
   .scroll-container {
-
+    transition: visibility 200ms;
   }
   .scroll-container > img {
     margin-top: -10px;
-    height: 40px;
+    height: 60px;
     filter: invert(100%) sepia(52%) saturate(137%) hue-rotate(212deg) brightness(111%) contrast(92%);
   }
   /* .scroll-container::before {
