--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -23,10 +23,11 @@ import Nav from "./Nav.astro";
   .mobile-box {
     width: 100vw;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
   }
   .header-name {
+    margin: 1rem 2rem;
     text-transform: uppercase;
     font-size: 18px;
   }
