--- a/src/components/Achieve.astro
+++ b/src/components/Achieve.astro
@@ -146,7 +146,8 @@ const singleSport = [
 </section>
 <style>
   section {
-    margin: 20px 0 100px;
+    margin: 0 0 100px 0;
+    padding-top: 1rem;
     width: 100vw;
     background-color: whitesmoke;
     text-align: center;
