--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,50 +1,82 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
 
-const pageTitle = "Amity | About"
-const skills = ["climbing", "skiing", "baking", "trying hard"]
-const skillColor = "navy"
-const fontWeight = 800;
-const textCase = "uppercase"
+const pageTitle = "About Amity"
+const image = {
+  url: "../src/images/gallery/Shaffer_Taylor-17.Lite.jpg",
+  position: '30% top',
+}
 ---
 
-<BaseLayout pageTitle={pageTitle}>
-  <p>You'll often find me exceedingly stoked and always in motion, often rock climbing. I'm constantly pursuing the next big adventure.</p>
-  <p>My secret climbing superpower is trying REALLY hard - I don’t give up!</p>
-  <p>Feel free to say hi if you ever see me around!!</p>
-  <h2>Why Climbing?</h2>
-    <p>
-      I find climbing compelling because it provides the opportunity to challenge myself while exploring incredible landscapes and connecting with others in the mountain adventure tribe.
-      I thrive when an objective pushes me to the limit, physically and mentally. I love digging deep to accomplish a goal.
-    </p>
-    <p>
-      I enjoy all climbing disciplines but feel most drawn to big wall climbing because it requires a combination of every skill in your repertoire in order to pull off a successful ascent!
-    </p>
-    <p>
-      I also appreciate connecting with climbing partners through a shared experience. I am always amazed at the accomplishments that teamwork and mutual stoke can lead to and I value learning from those around me. 
-      I find great joy in empowering others to believe in themselves and their ability to achieve something great.
-    </p>
-  <h2>Why Nutrition?</h2>
-    <p>
-      I've been immersed in 'weight sensitive' sports my entire life. 
-      I'm acutely aware of the harmful mental and physical effects of underfueling, in one's athletic performance and long-term health.
-    </p>
-    <p>
-      I grew up doing competitive gymnastics. While I was fortunate to have positive role models around me as a young gymnast I still saw the negative ramifications of underfueling in others.
-      I suffered a career ending back injury, which may have been partly related to unintentional nutritional deficiencies.
-    </p>
-    <p>
-      After finding climbing, I became more aware of a pervasive attitude around weight and diet that encouraged underfueling. 
-      I saw this play out in my climbing journey and experienced the negative effects firsthand, and I have witnessed it in countless climbers around me.
-    </p>
-    <p>
-      Having long had an interest in sports performance and physiology, along with a passion for food and cooking, it seemed like a natural connection to integrate both aspects into a career.
-    </p>
-    <p>
-      Now, my goal is to help athletes use nutrition to maximize their performance while protecting long term health!
-    </p>
+<BaseLayout pageTitle={pageTitle} img={image}>
+  <div class="about-wrapper">
+    <div class="about-initial">
+      <h1>{pageTitle}</h1>
+      <p>You'll often find me exceedingly stoked and always in motion, often rock climbing. I'm constantly pursuing the next big adventure.</p>
+      <p>My secret climbing superpower is trying REALLY hard - I don’t give up!</p>
+      <p>Feel free to say hi if you ever see me around!!</p>
+    </div>
+    <div class="about-climbing">
+      <h2>Why Climbing?</h2>
+      <p>
+        I find climbing compelling because it provides the opportunity to challenge myself while exploring incredible landscapes and connecting with others in the mountain adventure tribe.
+        I thrive when an objective pushes me to the limit, physically and mentally. I love digging deep to accomplish a goal.
+      </p>
+      <p>
+        I enjoy all climbing disciplines but feel most drawn to big wall climbing because it requires a combination of every skill in your repertoire in order to pull off a successful ascent!
+      </p>
+      <p>
+        I also appreciate connecting with climbing partners through a shared experience. I am always amazed at the accomplishments that teamwork and mutual stoke can lead to and I value learning from those around me. 
+        I find great joy in empowering others to believe in themselves and their ability to achieve something great.
+      </p>
+    </div>
+    <div class="about-nutrition">
+      <h2>Why Nutrition?</h2>
+      <p>
+        I've been immersed in 'weight sensitive' sports my entire life. 
+        I'm acutely aware of the harmful mental and physical effects of underfueling, in one's athletic performance and long-term health.
+      </p>
+      <p>
+        I grew up doing competitive gymnastics. While I was fortunate to have positive role models around me as a young gymnast I still saw the negative ramifications of underfueling in others.
+        I suffered a career ending back injury, which may have been partly related to unintentional nutritional deficiencies.
+      </p>
+      <p>
+        After finding climbing, I became more aware of a pervasive attitude around weight and diet that encouraged underfueling. 
+        I saw this play out in my climbing journey and experienced the negative effects firsthand, and I have witnessed it in countless climbers around me.
+      </p>
+      <p>
+        Having long had an interest in sports performance and physiology, along with a passion for food and cooking, it seemed like a natural connection to integrate both aspects into a career.
+      </p>
+      <p>
+        Now, my goal is to help athletes use nutrition to maximize their performance while protecting long term health!
+      </p>
+    </div>
+  </div>
 </BaseLayout>
+<style>
+  .about-initial,
+  .about-climbing,
+  .about-nutrition {
+    background-color: rgba(245, 245, 245, 0.9);
+    margin: 0 1rem;
+    padding: 0 1rem;
+  }
+  .about-initial {
+    margin-top: 50vh;
+  }
+  h1, h2 {
+  }
+  p {
 
+  }
+  @media screen and (min-width: 770px) {
+    .about-wrapper {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+    }
+  }
+</style>
 
 <!-- <p>I'm a pro climber, soon-to-be registered dietician, and stoked on life!</p>
 <p>My skills are:</p>
