--- a/src/components/PhotoDisplay.astro
+++ b/src/components/PhotoDisplay.astro
@@ -233,14 +233,16 @@ const array = [
 body {
   margin: 0;
 }
+button {
+  margin: 0;
+  padding: 0;
+}
 .gallery {
   height: 100vh;
   width: 100vw;
   position: relative;
 }
 .gallery-button {
-  margin: 0;
-  padding: 0;
   position: absolute;
   z-index: 8;
   background: none;
@@ -256,16 +258,16 @@ body {
   height: 50px;
   border-radius: 50%;
   background-color: rgba(64, 64, 64, 0);
-  transition: 250ms ease-in-out;
-  /* filter: invert(100%) sepia(52%) saturate(137%) hue-rotate(212deg) brightness(111%) contrast(92%); */
+  transition: 150ms ease-in-out;
+  outline: none;
 }
 .gallery-button img:hover,
 .gallery-button img:focus {
   background-color: rgba(64, 64, 64, 0.6);
-  transform: scale(1.15);
 }
-.gallery-button:focus {
-  outline: 1px solid black;
+.gallery-button img:active {
+  transform: scale(0.9);
+  box-shadow: 0 0 3px black;
 }
 .gallery-button.prev {
   left: 2%;
