Style gallery - caption, arrows, etc

--- a/src/components/PhotoDisplay.astro
+++ b/src/components/PhotoDisplay.astro
@@ -156,7 +156,7 @@ const array = [
     src: gate,
     alt: 'Amity on Golden Gate',
     caption: 'Golden Gate',
-    location: `Yosemite`,
+    location: `El Capitan, Yosemite`,
     credit: {
       name: 'Felipe Nordenflycht',
       site: 'https://www.felipesh.com/',
@@ -217,10 +217,12 @@ const array = [
         <li class="slide">
           <img src={image.src} alt='' />
           <div class="credit-container">
-            <p>{image.caption}</p>
-            <p>{image.location}</p>
-            <p><a href={image.credit.site} target="_blank" rel="noreferrer">{image.credit.name}</a></p>
-          </div>
+            <div class="credit-text-wrapper">
+              <p>{image.caption}</p>
+              <p>{image.location}</p>
+              <p><a href={image.credit.site} target="_blank" rel="noreferrer">{image.credit.name}</a></p>
+            </div>
+            </div>
         </li>
       ))}
     </ul>
@@ -247,7 +249,7 @@ button {
   z-index: 8;
   background: none;
   border: none;
-  top: 50%;
+  top: calc(50% - 25px);
   color: rgb(245, 245, 245);
   cursor: pointer;
   border-radius: 50%;
@@ -304,26 +306,34 @@ button {
   opacity: 0;
   position: absolute;
   bottom: 0;
-  padding: 2rem;
+  padding: 2vw;
   transition: 1s opacity ease-in;
 }
-.credit-container > p {
+.credit-text-wrapper {
+  padding: 1vw 2vw;
+  background-color: rgba(64, 64, 64, 0.9);
+  border-radius: 3px;
+  /* border-top: 5px solid rgb(254, 7, 62); */
+  border-left: 12px solid rgb(245, 245, 245);
+}
+.credit-text-wrapper > p {
   margin: 0;
-  padding: 1px 5px;
   font-weight: 400;
-  color: whitesmoke;
-  background-color: rgba(0, 0, 0, 0.5);
+  color: rgb(245, 245, 245);
   cursor: zoom-in;
 }
-.credit-container > p > a {
-  color: whitesmoke;
+.credit-text-wrapper > p:first-child {
+  font-weight: 600;
+}
+.credit-text-wrapper > p > a {
+  color: rgb(245, 245, 245);
   text-decoration: none;
 }
-.credit-container > p:last-child {
+.credit-text-wrapper > p:last-child {
   cursor: pointer;
 }
 .slide[data-active] .credit-container {
-  animation: reveal 7s 1;
+  animation: reveal 17s 1;
   animation-fill-mode: forwards;
   animation-delay: 2s;
 }
