--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -9,6 +9,7 @@ import '../styles/global.css';
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
+    <script src="../scripts/menu.js" />
 		<title>Gallery</title>
 	</head>
 	<body>
