--- a/src/pages/nutrition.astro
+++ b/src/pages/nutrition.astro
@@ -4,37 +4,41 @@ import Counseling from "../components/Counseling.astro";
 ---
 
 <BaseLayout pageTitle="Amity | Nutrition">
-  <div class="opening-container">
-    <h1>Who can benefit from nutrition counseling?</h1>
-    <p>people who deal with x, y, z</p>
-    <p>people who want to maximize performance</p>
-    <p>people wanting to cultivate healthy eating habits</p>
-  </div>
+  <h1 class="dietician-title">Dietician</h1>
   <div class="nutrition-intro-container">
-    <h1>My Dream</h1>
-    <p>I want to help <em>you</em> use nutrition to maximize your performance and preserve long-term health.</p>
+    <p>I want to help <em>you</em> understand your fueling needs and use nutrition to maximize performance and promote long-term health.</p>
   </div>
   <div class="philosophy-container">
-    <h1>Philosophy</h1>
+    <h2>Philosophy</h2>
     <p>Here's where my philosophy goes...</p>
   </div>
+  <Counseling />
   <div class="creds-container">
-    <h1>Credentials</h1>
+    <h2>Credentials</h2>
     <p>I have a Master's in Sports Nutrition from the University of Colorado in Colorado Springs (December 2021).</p>
     <p>In 2022, I completed 1000 supervised practice hours, split between the following organizations:</p>
     <ul>
-      <li>---, an outpatient clinic in Fort Collins, specializing in eating disorders...</li>
-      <li>The Vegetable Connection, a nonprofit that helps families access nutritious, locally grown food: "connecting families and farms to inspire life-long healthy eating"</li>
-      <li>Phoenix Suns, an NBA team, working alongside the team dietician</li>
+      <li>Phoenix Suns, an NBA team, assisting the team dietician in providing performance nutrition support for the athletes</li>
+      <li>Kendall Reagan Nutrition Center, an outpatient clinic in Fort Collins with a focus on eating disorder care</li>
+      <li>The Vegetable Connection, a nonprofit that helps families access nutritious, locally grown food, where I helped provide nutrition education and teach cooking classes</li>
     </ul>
     <p>I'm preparing to take the Registered Dietician exam (spring 2023).</p>
   </div>
-  <Counseling />
 </BaseLayout>
 <style>
+  .dietician-title {
+    font-family: "Unbound", "Playfair", Georgia, 'Times New Roman', Times, serif;
+    color: whitesmoke;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
+    font-size: 48px;
+    margin-top: 225px;
+  }
   em {
     font-style: normal;
     font-weight: 600;
     text-transform: uppercase;
+  }
+  div {
+    background-color: whitesmoke;
   }
 </style>
