Continue styling list items on nutrition

--- a/src/components/List.astro
+++ b/src/components/List.astro
@@ -1,6 +1,8 @@
 ---
-const flareURL = "../src/images/icons/flare-custom.png";
+const flareURL = "../src/images/icons/biner.png";
 const { item } = Astro.props;
+
+// not using this currently, had built for Dietician page
 ---
 
 <li>
