--- a/src/pages/nutrition.astro
+++ b/src/pages/nutrition.astro
@@ -1,9 +1,7 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
 import Counseling from "../components/Counseling.astro";
-import List from "../components/List.astro";
 import arrow from "../images/icons/arrow-simple.svg";
-import star from "../images/icons/flare-custom.png";
 
 const image = {
   url: "../src/images/gallery/sixstar.jpeg",
@@ -60,14 +58,16 @@ const flareURL = "../src/images/icons/flare-custom.png";
       <h2>Can You Relate?</h2>
       <p><em>Do you:</em></p>
       <ul class="symptoms">
-        {symptoms.map((item) => <List item={item} /> )}
+        {symptoms.map((item) => <li>{item} </li> )}
       </ul>
     </div>
     <div id="fuel" class="fuel-container">
       <h2>Fuel Well to Perform</h2>
       <p><em>Proper nutrition can help:</em></p>
       <ul class="fuel">
-        {fuel.map((item) => <List item={item} /> )}
+        {fuel.map((item) => (
+          <li>{item}</li> 
+          ))}
       </ul>
     </div>
     <div id="philosophy" class="philosophy-container">
@@ -79,7 +79,7 @@ const flareURL = "../src/images/icons/flare-custom.png";
       <h2>Credentials</h2>
       <p>I have a Master's in Sports Nutrition from the University of Colorado in Colorado Springs (December 2021).</p>
       <p>In 2022, I completed 1000 supervised practice hours, split between the following organizations:</p>
-      <ul>
+      <ul class="creds-list">
         <li>Phoenix Suns, an NBA team, assisting the team dietician in providing performance nutrition support for the athletes</li>
         <li>Kendall Reagan Nutrition Center, an outpatient clinic in Fort Collins with a focus on eating disorder care</li>
         <li>The Vegetable Connection, a nonprofit that helps families access nutritious, locally grown food, and provides nutrition education and hosts cooking classes</li>
@@ -161,10 +161,28 @@ const flareURL = "../src/images/icons/flare-custom.png";
     cursor: pointer;
     border-color: rgb(64, 64, 64);
   }
-  .symptoms {
-    list-style: none;
-    /* list-style: georgian outside url("../src/images/icons/biner.png"); */
+  .symptoms,
+  .fuel,
+  .creds-list {
+    padding-left: 10px;
   }
+  .symptoms > li,
+  .fuel > li,
+  .creds-list > li {
+    margin: 0;
+    padding: 2px 22px;
+    list-style: none;
+    background-image: url("../src/images/icons/biner.png");
+    background-repeat: no-repeat;
+    background-position: left 5px;
+    background-size: 20px;
+  }
+  /* .fuel > li::before {
+    content: '';
+    display: inline-block;
+    height: 15px;
+    background-image: url(../src/images/icons/biner.png);
+  } */
 </style>
 <script defer>
   const jump = document.querySelector('img.jump-arrow');
